# glance-fashion-retrieval

./: .gitignore  DATA_CARD.md  Dockerfile  MODEL_CARD.md  Makefile  README.md  REVIEWER_GUIDE.md  SOLUTION_REPORT.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
examples/: evaluation_queries.jsonl
scripts/: build_manifest.py  prepare_fashionpedia.py
src/glance_retrieval/: __init__.py  audit.py  cli.py  config.py  crops.py  evaluation.py  gallery.py  indexer.py  manifest.py  models.py  query.py  retriever.py  storage.py  types.py
tests/: test_audit.py  test_config.py  test_evaluation.py  test_gallery.py  test_query.py  test_retrieval_math.py  test_retriever_integration.py
